--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.4.0",
+    "@opencode-ai/plugin": "1.2.5",
     "@types/bun": "latest",
     "prettier": "3.8.1"
   },
