--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,7 @@
     "enabled": true,
     "actions": {
       "source": {
-        "organizeImports": "on"
+        "organizeImports": "off"
       }
     }
   }
