--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   },
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist",
+    "build": "bun build ./src/index.ts --outdir ./dist --target node",
     "format": "prettier --write --log-level warn .",
     "test": "bun test",
     "lint": "biome check . && prettier --check --log-level warn ."
